# labella.py

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.rst  make_release.py  pyproject.toml  setup.py
.github/workflows/: build.yml
docs/: README.md
examples/: Makefile  basic_down.py  basic_down_layered.py  basic_left.py  basic_right.py  basic_up.py  run_examples.sh  timeline_down.py  timeline_down.tex  timeline_kit_1.py  timeline_kit_1.tex  timeline_kit_2.py  timeline_kit_2.tex  timeline_kit_3.py  timeline_kit_3.tex  timeline_kit_4.py  timeline_kit_4.tex  timeline_kit_5.py  timeline_kit_5.tex  timeline_layered.py  timeline_layered.tex  timeline_left.py  timeline_left.tex  timeline_right.py  timeline_right.tex  timeline_up.py  timeline_up.tex
labella/: __init__.py  __version__.py  d3_time.py  distributor.py  force.py  metrics.py  node.py  removeOverlap.py  renderer.py  scale.py  svg.py  tex.py  timeline.py  utils.py  vpsc.py
tests/: node.py  test_distributor.py  test_force.py  test_metrics.py  test_node.py  test_scale_linear.py  test_scale_time.py  test_vpsc.py
