[tool.poetry]
name = "labella.py"
version = "0.9.2"
description = "Python version of Labella.js"
authors = ["Gertjan van den Burg <gertjanvandenburg@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.5"
intervaltree = ">3.0.0"

[tool.poetry.dev-dependencies]
green = "^2.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
